working with static picture

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
   <ion-content padding class="buttons-components-page">
     <ion-card>
       <ion-card-content>
-        <img id="imageOCR" [src]="base64Image" *ngIf="base64Image" />
+        <img id="imageOCR" src="assets/images/cnh.jpg" />
       </ion-card-content>
 
       <ion-item>
@@ -24,10 +24,7 @@
     </ion-card>
   </ion-content>
   <ion-content>
-    <ion-item>
       <ion-label>RG</ion-label>
       <ion-input id='docRG'>0001</ion-input>
-    </ion-item>
-
   </ion-content>
 </ion-content>
